test/errors/type/str/split1.yasl
mt.lookup('', .split)(1, true)
